Closed
Bug 504985
Opened 16 years ago
Closed 16 years ago
get_accRole, if returning a role string, includes namespace URI withthe actual role, effective June 9, 2009
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: MarcoZ, Assigned: surkov)
References
Details
(Keywords: access, regression)
Attachments
(1 file)
|
1.48 KB,
patch
|
MarcoZ
:
review+
davidb
:
review+
|
Details | Diff | Splinter Review |
Found by the GW Micro folks. Our check here:
http://mxr.mozilla.org/mozilla-central/source/accessible/src/msaa/nsAccessibleWrap.cpp#522
no longer evaluates to true, so each H1 or other element now gets the namespace URI included as part of the role string.
This breaks at least Window-Eyes, possibly others.
This was introduced in the Minefield 3.6a1pre builds starting June 9, 2009.
| Reporter | ||
Comment 1•16 years ago
|
||
CC'ing JST since he was the reviewer of bug 259385, and smaug for hopes of some input. Out code hasn't changed since the Firefox 3.0 days, and according to Surkov's investigation, the code in nsNodeInfo::GetNameSpaceUri hasn't changed either.
| Reporter | ||
Comment 2•16 years ago
|
||
This is a regression from bug 468708:
http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2009-06-08+02%3A00&enddate=2009-06-09+05%3A00
Blocks: 468708
| Assignee | ||
Comment 3•16 years ago
|
||
Ok, it sounds all we can is to follow our comment "Only append name space if different from that of current document."
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #389433 -
Flags: review?(marco.zehe)
Attachment #389433 -
Flags: review?(bolterbugz)
| Reporter | ||
Comment 4•16 years ago
|
||
Comment on attachment 389433 [details] [diff] [review]
patch
Yep this restores Window-Eyes functionality. Thanks!
Attachment #389433 -
Flags: review?(marco.zehe) → review+
Updated•16 years ago
|
Attachment #389433 -
Flags: review?(bolterbugz) → review+
Comment 5•16 years ago
|
||
Comment on attachment 389433 [details] [diff] [review]
patch
r=me, looks good.
>- if (!nameSpaceURI.IsEmpty()) {
>- // Only append name space if different from that of current document
>+
>+ // Only append name space if different from that of current document.
>+ if (!nodeInfo->NamespaceEquals(document->GetDefaultNamespaceID())) {
>+ nsAutoString nameSpaceURI;
>+ nodeInfo->GetNamespaceURI(nameSpaceURI);
> roleString += NS_LITERAL_STRING(", ") + nameSpaceURI;
> }
Very strange that we had the comment there already, but no check.
| Assignee | ||
Comment 6•16 years ago
|
||
(In reply to comment #5)
> Very strange that we had the comment there already, but no check.
This comment was valid for HTML content at least. Possibly they didn't keep in mind another namespaces that time. Possibly that was valid for XUL as well, I don't know.
| Assignee | ||
Comment 7•16 years ago
|
||
landed on 1.9.2 - http://hg.mozilla.org/mozilla-central/rev/eb7644ffddff
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•