Bug 504985 - get_accRole, if returning a role string, includes namespace URI withthe actual role, effective June 9, 2009, r=marcoz, davidb